--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "axios": "^1.8.1",
+    "copy-to-clipboard": "^3.3.3",
     "react": "^18.3.1",
-    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
